<resources>
    <string name="app_name">RecyclingHelper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Eco Friend</string>
    <string name="title_progress">Progress</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_search">Search</string>


    <!--Schedule strings-->
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="save">Remind Me</string>

    <!-- Add new item category strings-->
    <string-array name="categories">
        <item>Trash</item>
        <item>Recycle</item>
        <item>Compost</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_add_new_item">Add New Item</string>
</resources>
