<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TimePicker
                style="@style/TimePicker"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:descendantFocusability="blocksDescendants"
                android:layout_alignParentTop="true"
                ></TimePicker>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:id="@+id/button_group"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:gravity="center">
               <!-- android:layout_marginLeft="40dp"-->


                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:buttonTint="@color/colorGreen"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_toRightOf="@+id/monday"
                    android:buttonTint="@color/colorGreen"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_toRightOf="@+id/tuesday"
                    android:buttonTint="@color/colorGreen"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_toRightOf="@+id/wednesday"
                    android:buttonTint="@color/colorGreen"
                    android:text="@string/thursday" />
                <CheckBox
                    android:id="@+id/friday"
                    android:layout_toRightOf="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:buttonTint="@color/colorGreen"/>

                <!--deletelater, for saturday testing lmao-->
            <!--    <CheckBox
                    android:id="@+id/weekend"
                    android:layout_toRightOf="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kms" />-->
            </RelativeLayout>

            <Button
                android:id="@+id/buttonSaveTime"
                style="@style/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_group"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />



            </RelativeLayout>

    </ScrollView>

</FrameLayout>